--- a/CurrentlyPlaying/popup.html
+++ b/CurrentlyPlaying/popup.html
@@ -3,27 +3,28 @@
 
 <head>
   <!-- load stylesheets: Bootstrap v2.3.0 - http://twitter.github.com/bootstrap/index.html -->
-  <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css"></link>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
   <script type="text/javascript" src="popup.js"></script>
   <!-- load stylesheets: internal -->
-  <link rel="stylesheet" type="text/css" href="../css/global.css"></link>
-  <link rel="stylesheet" type="text/css" href="../css/main.css"></link>
+  <link rel="stylesheet" type="text/css" href="css/global.css"></link>
+  <link rel="stylesheet" type="text/css" href="css/main.css"></link>
 </head>
-
+<!-- todo: allow button to be pushed when not on active tab and it still gets the currently playing on tunein tab -->
 <body>
   <div id="main-outer">
     <div id="main-inner">
-      <div id="main-title">TuneIn NowPlaying</div>
-      <!-- Maybe implement a webservice to get album art from discogs or amazon -->
-      <img id="main-image" src="icon.png" />
-      <span id="total">N/A</span>
-      <div id="main-about-text">Buttons down here for links to spotify and Google search</div>
+      <div id="main-title">TuneIn Now Playing</div>
+      <img id="main-image" class="artWork" src="icon.png" />
+      <div id="artistInfo" style="text-align:center">
+        <a id="spotURL" href="" target="_blank">
+          <span id="nowPlaying">N/A</span>
+        </a>
+      </div>
+      <div id="main-about-text" style="text-align:center">
+        <a id="googleSearch" href="" target="_blank">Google Search</a>
+      </div>
     </div>
   </div>
-
-  <!-- <h3 style="font-weight:bold; text-align:center;"></h3>
-  <span id="total">N/A</span> -->
-  <!-- <div><button type="submit" id="search">Search on Google</button></div> -->
 </body>
 
 </html>
