--- a/CurrentlyPlaying/popup.html
+++ b/CurrentlyPlaying/popup.html
@@ -4,7 +4,7 @@
 <head>
   <!-- load stylesheets: Bootstrap v2.3.0 - http://twitter.github.com/bootstrap/index.html -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
-  <script type="text/javascript" src="popup.js"></script>
+  <script type="text/javascript" src="js/popup.js"></script>
   <!-- load stylesheets: internal -->
   <link rel="stylesheet" type="text/css" href="css/global.css"></link>
   <link rel="stylesheet" type="text/css" href="css/main.css"></link>
@@ -14,7 +14,7 @@
   <div id="main-outer">
     <div id="main-inner">
       <div id="main-title">TuneIn Now Playing</div>
-      <img id="main-image" class="artWork" src="icon.png" />
+      <img id="main-image" class="artWork" src="images/icon.png" />
       <div id="artistInfo" style="text-align:center">
         <a id="spotURL" href="" target="_blank">
           <span id="nowPlaying">N/A</span>
